added analysis plot

--- a/nb_3_descriptor_vae_analysis.ipynb
+++ b/nb_3_descriptor_vae_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,12 @@
     "from fomo.dataset import DescriptorDatasets\n",
     "from scipy.stats import gaussian_kde\n",
     "\n",
-    "import h5py\n"
+    "import h5py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
